# bikes

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2020-07-13-035620_create_bike/: down.sql  up.sql
src/: main.rs  schema.rs
src/application/: mod.rs
src/application/adapters/: bike_writer_storage.rs
src/application/adapters/mappers/: bike_mapper.rs  mod.rs
src/application/adapters/models/: mod.rs
src/application/adapters/repository/: bike_mapper.rs  bike_model.rs  bike_reader_storage.rs  bike_writer_storage.rs  mod.rs
src/application/adapters/sql/: bike_model.rs  bike_writer_storage.rs  mod.rs
src/application/handlers/: bike.rs  bike_handler.rs  bike_mapper.rs  bike_routes.rs  error.rs  mod.rs
src/application/provider/: error.rs  mod.rs  pool.rs  postgres.rs  sql_mock.rs
src/application/rest/: mod.rs  server.rs  state.rs
src/bikes/: bike.rs  mod.rs  schema.rs
src/bikes/managers/: bike_service.rs  mod.rs
src/bikes/ports/: bike_manager.rs  bike_repository.rs  mod.rs
src/bikes/repositories/: bike_repository.rs  mod.rs
src/bikes/services/: bike_service.rs  mod.rs
