[package]
name = "di"
version = "0.1.0"
authors = ["cristianchaparroa <cristianchaparroa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## HTTP
actix-web = "2.0.0"

## ORM
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
r2d2 = "0.8"
actix-diesel = "0.3.0"

## Utils
uuid = { version = "0.8", features = ["serde", "v4"] }

## environment
dotenv = "0.11"